// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`commonmark-0.30-example-334.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
\` \`
\`  \`

=====================================output=====================================
\` \` \`  \`

================================================================================
`;

exports[`example-11.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- placeholder for continuous thematic breaks not being treated as yaml -->

***
---
___

=====================================output=====================================
<!-- placeholder for continuous thematic breaks not being treated as yaml -->

---

---

---

================================================================================
`;

exports[`example-15.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- placeholder for continuous thematic breaks not being treated as yaml -->

 ***
  ***
   ***

=====================================output=====================================
<!-- placeholder for continuous thematic breaks not being treated as yaml -->

---

---

---

================================================================================
`;

exports[`example-46.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- placeholder for continuous thematic breaks not being treated as yaml -->

****
## foo
****

=====================================output=====================================
<!-- placeholder for continuous thematic breaks not being treated as yaml -->

---

## foo

---

================================================================================
`;

exports[`example-215.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
- one

two

=====================================output=====================================
- one

two

================================================================================
`;
